# Man-Machine-Interface

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MANIFESTO.md  Makefile  README.md  cyberlusion-structure.sh  pyproject.toml  requirements.txt  setting_up_a_new_remote_git_repository.textile  windows-setup.ps1
scripts/: build-bootloader.ps1  install-deps.ps1  run-tests.ps1
src/layer1_firmware/bootloader/stage1/: main.c
src/layer2_neural/signal_processing/: __init.py__  neural_processor.py
src/layer3_security/behavioral_engine/: behavioral_security.rs  lib.rs
