[workspace]
members = ["src/layer3_security/behavioral_engine"]

[workspace.package]
version = "0.1.0"
authors = ["Cyberlusion Team"]
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
