[tool.poetry]
name = "cyberlusion"
version = "0.1.0"
description = "Secure Human-Machine Interface Framework"
authors = ["Cyberlusion Team"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
scipy = "^1.10"
cryptography = "^41.0"
tensorflow = "^2.13"
pycryptodome = "^3.18"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^23.7"
mypy = "^1.4"
bandit = "^1.7"
safety = "^2.3"
pre-commit = "^3.3"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
